# immaginiBot

./: .gitignore  bot.py  database.py  export.py  export.txt  import.py  importdb.py  logging.json.TEMPLATE  manual.py  pyproject.toml  requirements.txt  upload.py  utils.py
.github/: dependabot.yml
config/: body.json.EXAMPLE  body.txt.EXAMPLE  force.json.EXAMPLE  images.toml.TEMPLATE  logging.json.EXAMPLE
immaginibot/: __init__.py  bot.py  export.py  models.py  utils.py
templates/: body.txt  force.txt
