[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "immaginiBot"
version = "0.1.0"
description = "A Reddit bot for images"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "thefuzz<0.23",
    "toml<0.11",
    "praw<7.8",
]

[project.scripts]
bot = "immaginibot.bot:main"


[tool.ruff]
# Enable Pyflakes `E` and `F` codes by default.
lint.select = ["E", "F", "W", "I", "N", "UP", "B", "G", "PIE", "TCH", "PLE", "PLW"]
lint.ignore = []
line-length = 100
output-format = "full"

[tool.hatch.build.targets.sdist]
include = [
  "/immaginibot",
]
exclude = [
  "/config",
]